--- a/aboutUs/styles.css
+++ b/aboutUs/styles.css
@@ -7,7 +7,7 @@ body {
   justify-content: center;
 }
 
-#directors {
+#clergy {
   display: grid;
   justify-content: center;
   grid-template-columns: 150px 150px;
